; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_pmap_disconnect_options.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_pmap_disconnect_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PMAP_OPTIONS_COMPRESSOR_IFF_MODIFIED = common dso_local global i32 0, align 4
@PMAP_OPTIONS_COMPRESSOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pmap_disconnect_options(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @PMAP_OPTIONS_COMPRESSOR_IFF_MODIFIED, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %21

11:                                               ; preds = %3
  %12 = load i32, i32* %4, align 4
  %13 = call i64 @pmap_is_modified(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  %16 = load i32, i32* @PMAP_OPTIONS_COMPRESSOR, align 4
  %17 = load i32, i32* %5, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %5, align 4
  br label %20

19:                                               ; preds = %11
  br label %20

20:                                               ; preds = %19, %15
  br label %21

21:                                               ; preds = %20, %3
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* %5, align 4
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @pmap_page_protect_options(i32 %22, i32 0, i32 %23, i8* %24)
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @pmap_get_refmod(i32 %26)
  ret i32 %27
}

declare dso_local i64 @pmap_is_modified(i32) #1

declare dso_local i32 @pmap_page_protect_options(i32, i32, i32, i8*) #1

declare dso_local i32 @pmap_get_refmod(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
